set01/problem09_compile_errors.txt
Compilation started at 10/31/2023, 11:34:05 AM
Compilation finished at 10/31/2023, 11:34:06 AM
Compilation started at 10/31/2023, 11:34:29 AM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c: In function 'square_root':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:40:11: error: 'root' undeclared (first use in this function)
    return root;
           ^~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:40:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 10/31/2023, 11:34:29 AM
Compilation started at 10/31/2023, 11:34:38 AM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c: In function 'square_root':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:40:11: error: 'root' undeclared (first use in this function)
    return root;
           ^~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:40:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 10/31/2023, 11:34:38 AM
Compilation started at 10/31/2023, 11:34:49 AM
Compilation finished at 10/31/2023, 11:34:49 AM
Compilation started at 10/31/2023, 11:37:39 AM
Compilation finished at 10/31/2023, 11:37:40 AM
Compilation started at 10/31/2023, 11:37:53 AM
Compilation finished at 10/31/2023, 11:37:53 AM
Compilation started at 10/31/2023, 11:42:40 AM
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/31/2023, 11:42:40 AM
Compilation started at 10/31/2023, 11:43:12 AM
Compilation finished at 10/31/2023, 11:43:12 AM
Compilation started at 10/31/2023, 11:43:57 AM
Compilation finished at 10/31/2023, 11:43:58 AM
Compilation started at 10/31/2023, 3:22:07 PM
Compilation finished at 10/31/2023, 3:22:07 PM
Compilation started at 11/16/2023, 4:30:23 PM
Compilation finished at 11/16/2023, 4:30:23 PM
Compilation started at 11/16/2023, 4:30:38 PM
Compilation finished at 11/16/2023, 4:30:38 PM
Compilation started at 11/16/2023, 7:57:34 PM
Compilation finished at 11/16/2023, 7:57:35 PM
Compilation started at 11/16/2023, 7:57:47 PM
Compilation finished at 11/16/2023, 7:57:47 PM
Compilation started at 11/16/2023, 8:01:25 PM
Compilation finished at 11/16/2023, 8:01:25 PM
